--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="wrapper" class="fade-in">
 			   
 				<div id="intro">
-					<img src="/images/toc.png" width="100"/>	
+					<img src="images/toc.png" width="100"/>	
 					<h1>La Cuisine <br />
 						de Sira</h1>
 						<p>" Pour bien cuisiner il faut de bons ingrédients, un palais, du coeur et des amis."</p>
