--- a/elements.html
+++ b/elements.html
@@ -61,7 +61,7 @@
 									d'ailleurs</a></h2>
 									
 								</header>
-								<img src="/images/grenade.jpg" ></img>
+								<img src="images/grenade.jpg" ></img>
 								
 							</article>
 
