--- a/generic.html
+++ b/generic.html
@@ -63,7 +63,7 @@
 									gourmandise ?</a></h2>
 									<p></p>
 								</header>
-								<img src="/images/cafe.jpg" ></img>
+								<img src="images/cafe.jpg" ></img>
 								
 							</article>
 
