--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									d'ailleurs</a></h2>
 									<p></p>
 								</header>
-								<img src="images/pp.jpg" ></img>
+								<img src="images/pp.jpg" width="700"></img>
 								
 							</article>
 
