--- a/generic.html
+++ b/generic.html
@@ -59,7 +59,7 @@
 									gourmandise ?</a></h2>
 									<p></p>
 								</header>
-								<img src="images/cafe.jpg" ></img>
+								<img src="images/cafe.jpg" width="700" ></img>
 								
 							</article>
 
