--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">lahmadjoun<br />
+										<h2><a href="#">Lahmadjoun<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/lahmadjoun.jpg" alt="" /></a>
