--- a/elements.html
+++ b/elements.html
@@ -74,7 +74,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/feuilles.jpg" alt="" /></a>
-									<p>Feuilles de vignes farcies au riz et ses épices.Le tout parsemé de rondelles de citron</p>
+									<p>Feuilles de vignes farcies au riz et ses épices, le tout parsemé de rondelles de citron</p>
 									<p><strong>Prix: 4€ les 100g</strong></p>
 								</article>
 								<article>
