--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						</section>
 						<section>
 							<h3>Email</h3>
-							<p><a href="mailto:cusine-de-sira@outlook.fr">cusine-de-sira@outlook.fr</a></p>
+							<p><a href="mailto:cusine-de-sira@outlook.fr">cuisine-de-sira@outlook.fr</a></p>
 						</section>
 						<section>
 							<h3>Social</h3>
