--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Les Specialitées</a>
+						<a href="index.html" class="logo">Les Specialités</a>
 					</header>
 
 				<!-- Nav -->
