--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/lahmadjoun.jpg" alt="" /></a>
-									<p>Délicieuse pizza garnie à la viande hachée généreusement relevée (petite taille)</p>
-                                     <p><strong> Prix: 1,20€ pièce </strong></p>
+									<p>Délicieuse pizza garnie à la viande hachée généreusement relevée </p>
+                                     <p><strong> Prix petite taille: 1,50€ pièce </strong></p>
+				     <p><strong> Prix grande taille: 2,50€ pièce </strong></p>				
 									
 								</article>
 								<article>
@@ -103,7 +104,7 @@
 									<p>Chaussons au fromage,viande ou aux épinards</p>
 									<p>(Disponible en format rouleaux)</p>
 
-										<p><strong> Prix: 2€ pièce</strong></p>
+										<p><strong> Prix: 1,50€ pièce</strong></p>
 								</article>
 								<article>
 									<header>
